tests/ui/parser/diff-markers/tuple-struct.rs
struct S(
<<<<<<< HEAD //~ ERROR encountered git conflict marker
    u8,
=======
    i8,
>>>>>>> branch
);
